# cheeky-engine

./: .clang-format  .gitignore  .gitmodules  cheeky-engine.code-workspace  format_codebase.sh  meson.build  shader_grabber.sh
data/resources/: thingy.gltf
data/shader/: VkEngine.cpp  gltf_pbr.frag  gltf_pbr.vert  gltf_pbr_input.glsl  gradient_color.comp  mesh.vert  mesh.vert.spv  sky.comp  textured.frag  triangle.frag  triangle.frag.spv  triangle.vert  triangle_basic.frag  triangle_basic.frag.spv  triangle_basic.vert
src/Private/: EngineCore.cpp  VkEngine.cpp  main.cpp
src/Private/Game/: GameLogging.cpp  GameMain.cpp  GameScene.cpp  Node.cpp
src/Private/Game/Editor/: SceneEditor.cpp
src/Private/Game/Nodes/: MeshNode.cpp
src/Private/Game/Utility/: SceneCreationUtils.cpp
src/Private/Renderer/: Material.cpp  Renderable.cpp  VkEngine.cpp  VkTypes.cpp
src/Private/Renderer/Utility/: DebugPanels.cpp  DeletionQueue.cpp  UploadRequest.cpp  VkDescriptors.cpp  VkImages.cpp  VkInitialisers.cpp  VkLoader.cpp  VkPipelines.cpp
src/Private/Utility/: DeletionQueue.cpp  UploadRequest.cpp  VkDescriptors.cpp  VkImages.cpp  VkInitialisers.cpp  VkLoader.cpp  VkPipelines.cpp
src/Public/: CVars.h  EngineCore.h  VkEngine.h  VkThirdParty.h  VkTypes.h
src/Public/Game/: GameLogging.h  GameMain.h  GameScene.h  GameTime.h  Node.h
src/Public/Game/Editor/: SceneEditor.h
src/Public/Game/Nodes/: MeshNode.h
src/Public/Game/Utility/: SceneCreationUtils.h
src/Public/Renderer/: FrameDrawContext.h  Material.h  MaterialInterface.h  RenderObject.h  Renderable.h  ResourceStorage.h  Scene.h  Viewport.h  VkEngine.h  VkTypes.h
src/Public/Renderer/Utility/: DebugPanels.h  DeletionQueue.h  UploadRequest.h  VkDescriptors.h  VkImages.h  VkInitialisers.h  VkLoader.h  VkPipelines.h
src/Public/Utility/: DeletionQueue.h  UploadRequest.h  VkDescriptors.h  VkImages.h  VkInitialisers.h  VkLoader.h  VkPipelines.h
subprojects/: tinyobjloader.wrap  vkbootstrap.wrap  volk.wrap  vulkan-memory-allocator.wrap  vulkan-validationlayers.wrap
subprojects/imgui/: meson.build
subprojects/stb_image/: meson.build
subprojects/tinyobjloader/: meson.build
subprojects/vkbootstrap/: meson.build
subprojects/volk/: meson.build
